Created EmployeetController with all methods GET, POST, PUT, DELETE

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "WebApiCon": "Data Source=LLN-02;Initial Catalog=mytestdb;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
